--- a/ml.html
+++ b/ml.html
@@ -58,7 +58,7 @@
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     font-weight:500;
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 
   .usp {
@@ -102,6 +102,9 @@
     .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
     .bullet {width:32px;height:32px}
+    .fa-stack {
+      font-size: 2.4em;
+    }
   }
 
   @media (min-width: 576px) {
@@ -294,70 +297,70 @@
       <div class="row">
         <div class="col-md-6">
           <div class="row flex-nowrap">
-            <div class="col-5" align="right">
-              <span class="fa-stack fa-2x">
+            <div class="col-4" align="right">
+              <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-users fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-7">
+            <div class="col-8">
               <h4 class="icon"><b>Kleine Gruppen</b><br> bis maximal 14 Teilnehmer</h4>
             </div>
           </div>
           <div class="row flex-nowrap">
-            <div class="col-5" align="right">
-              <span class="fa-stack fa-2x">
+            <div class="col-4" align="right">
+              <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-money-bill-alt fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-7">
+            <div class="col-8">
               <h4 class="icon"><b>990 CHF</b></h4>
             </div>
           </div>
           <div class="row flex-nowrap">
-            <div class="col-5" align="right">
-              <span class="fa-stack fa-2x">
+            <div class="col-4" align="right">
+              <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-hand-holding-heart fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-7">
+            <div class="col-8">
               <h4 class="icon"><b>1-zu-1 Betreuung</b><br>durch erfahrene Dozenten</h4>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="row">
-            <div class="col-5" align="right">
-              <span class="fa-stack fa-2x">
+            <div class="col-4" align="right">
+              <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-calendar-alt fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-7">
+            <div class="col-8">
               <h4 class="icon"><b>2-Tage</b><br>von 9 bis 18Uhr</h4>
             </div>
           </div>
           <div class="row flex-nowrap">
-            <div class="col-5" align="right">
-              <span class="fa-stack fa-2x">
+            <div class="col-4" align="right">
+              <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-headset fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-7">
+            <div class="col-8">
               <h4 class="icon"><b>Webinar</b><br>Online-Kurs über Zoom</h4>
             </div>
           </div>
           <div class="row flex-nowrap">
-            <div class="col-5" align="right">
-              <span class="fa-stack fa-2x">
+            <div class="col-4" align="right">
+              <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-registered fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-7">
+            <div class="col-8">
               <h4 class="icon"><b>R Grundlagen</b><br>vorausgesetzt.<br><a data-toggle="modal" href="#experience">&rarr;Details</a></h4>
             </div>
           </div>
