--- a/ml.html
+++ b/ml.html
@@ -110,14 +110,14 @@
   @media (min-width: 576px) {
     .concepts li{font-size: 16px;}
     #myCarousel {height: 620px}
-    .course-title {font-size:60px;padding:4% 0%}
+    .course-title {font-size:60px}
     .usp {font-size:16px}
   }
 
   @media (min-width: 768px) {
     .concepts li{font-size: 12px;}
     #myCarousel {height: 400px}
-    .course-title {font-size:80px;padding:4% 0%}
+    .course-title {font-size:80px}
     .usp {font-size:24px;padding-left:0px}
   }
 
@@ -127,7 +127,7 @@
       padding: 4px 0px;
       }
     #myCarousel {height: 500px}
-    .course-title {font-size:100px;padding:4% 0%}
+    .course-title {font-size:100px}
     .usp {font-size:2rem;}
     .webinar-tag {width:200px;height:80px;padding:20px}
     .unibas-tag {width:240px;height:100px;padding:6px 0px}
@@ -149,7 +149,7 @@
       padding: 10px 0px;
       }
     #myCarousel {height: 580px}
-    .course-title {font-size:140px;padding:4% 0%}
+    .course-title {font-size:140px}
     .usp {font-size:40px}
   }
 
@@ -253,7 +253,7 @@
 
   <!-- Services -->
   <header class="masthead">
-    <div class="container" style="padding-top:15%">
+    <div class="container" style="padding-top:18%">
       <div class="row">
         <div class="col-lg-12" align="left">
           <div class="row">
