--- a/ml.html
+++ b/ml.html
@@ -105,6 +105,9 @@
     .fa-stack {
       font-size: 2.4em;
     }
+    .masthead .container {
+      padding-top: 120px;
+    }
   }
 
   @media (min-width: 576px) {
@@ -138,6 +141,9 @@
     }
     .icon {
       font-size: 2rem;
+    }
+    .masthead .container {
+      padding-top: 200px;
     }
   }
 
@@ -253,7 +259,7 @@
 
   <!-- Services -->
   <header class="masthead">
-    <div class="container" style="padding-top:20%">
+    <div class="container">
       <div class="row">
         <div class="col-lg-12" align="left">
           <div class="row">
