--- a/ml.html
+++ b/ml.html
@@ -78,15 +78,11 @@
     display:inline-block;
   }
 
-  .unibas-tag {
-    /*box-shadow: 6px 6px #737373;*/
-
-  }
-
   .webinar-tag {
     /*box-shadow: 6px 6px #3a6655;*/
     color: white;
-    border: 1px solid white;
+    border-left: 1px solid white;
+    border-radius: 0px;
     }
 
   .webinar-tag h1{
@@ -98,7 +94,7 @@
     #myCarousel {height: 620px}
     .course-title {font-size:40px;padding:4% 0%}
     .usp {font-size:1rem;}
-    .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
+    .webinar-tag {width:140px;height:52px;padding:14px 8px 8px 24px}
     .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
     .bullet {width:32px;height:32px}
